[package]
name = "rs-test"
version = "0.1.0"
authors = ["applepie"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.serenity]
version = "0.10"
default-features = false
features = [
    "builder",
    "client",
    "framework",
    "gateway",
    "http",
    "model",
    "standard_framework",
    "utils",
    "rustls_backend",
    "voice",
    "cache",
]

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
warp = "0.3"
serde = "1.0.125"
songbird = "0.1.6"
rand = "0.8.3"
reqwest = { version = "0.11", features = ["json"] }