[package]
name = "rs-test"
version = "0.1.0"
authors = ["applepie"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.serenity]
version = "0.10.9"
default-features = false
features = [
    "builder",
    "client",
    "framework",
    "gateway",
    "http",
    "model",
    "standard_framework",
    "utils",
    "rustls_backend",
    "voice",
    "cache",
]

[dependencies.rusqlite]
version = "0.26.0"
features = ["bundled"]

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
warp = "0.3"
serde = "1.0.125"
serde_json = "1.0.64"
songbird = "0.1.6"
rand = "0.8.3"
reqwest = { version = "0.11", features = ["json"] }
reqwest-middleware = "0.1.6"
reqwest-retry = "0.1.5"
rusoto_core = "0.47.0"
rusoto_dynamodb = "0.47.0"
dynomite = { git = "https://github.com//softprops/dynomite", branch = "master" }
async-trait = "0.1.50"
image = { version = "0.23.14", features = ["gif", "jpeg", "png", "webp"]  }
uuid = "0.8"
regex = "1.5.4"
base64 = "0.13.0"
tempfile = "3.3.0"